cambio dibujos y lista de juegos

--- a/CarpetaHenry/index.html
+++ b/CarpetaHenry/index.html
@@ -10,6 +10,25 @@
     <h1> Pagina de Davidcillo el Pillo </h1>
     
     <p> Mi nombre es <b>David</b>, mi novia es <b>Michelle</b> y juntos estamos creando páginas web gracias al mundo y a la vida </p>
-    <img src="Imagenes/Gekko y Carnalito.png" height="250" width="250">
+    <img src="Imagenes/Yuda.jpg" height="250" width="125">
+    <img src="Imagenes/Bunny.jpg" height="230" width="115">
+    <img src="Imagenes/Ambos.jpg" height="250">
+
+    <hr>
+    
+    <p> Esta es una lista de mis juegos favoritos </p>
+    <ul>
+        <li> Valorant </li>
+        <li> Megaman </li>
+        <li> Pokemon </li>
+        <li> Portal </li>
+        <li> Deadcells </li>
+        <li> Minecraft </li>
+    </ul>
+    <p> Estos son sólo algunos de los juegos que más me gustan, porque si los pusiera todos <br> seguramente no alcanzaría la página a mostrarlo todo</p>
+    <hr>
+    <p> En fin, espero que hayan aprendido mucho y les guste el contenido de mi página
+        <br>Para más información recuerden visitar mi página de manera frecuente.
+    </p>
 </body>
 </html>
