--- a/CarpetaHenry/index.html
+++ b/CarpetaHenry/index.html
@@ -29,6 +29,7 @@
     <hr>
     <p> En fin, espero que hayan aprendido mucho y les guste el contenido de mi página
         <br>Para más información recuerden visitar mi página de manera frecuente.
+        <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti minus aperiam incidunt, tempora corrupti culpa autem enim, id maxime dicta itaque facere ipsum! Odit eos, natus ullam eligendi voluptatem qui?
     </p>
 </body>
 </html>
