adicion del css al documento

--- a/CarpetaHenry/index.html
+++ b/CarpetaHenry/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dave MainPage</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dave MainPage</title>
 
 </head>
 <body>
@@ -29,7 +30,6 @@
     <hr>
     <p> En fin, espero que hayan aprendido mucho y les guste el contenido de mi página
         <br>Para más información recuerden visitar mi página de manera frecuente.
-        <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti minus aperiam incidunt, tempora corrupti culpa autem enim, id maxime dicta itaque facere ipsum! Odit eos, natus ullam eligendi voluptatem qui?
-    </p>
+        </p>
 </body>
 </html>
